# NativeUtil

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pom.xml
.github/workflows/: cmake.yml
src/main/c/: .gitignore  CMakeLists.txt  common-tools.cpp  common_tools.cpp  native_util.cpp  native_util.h  net_blueberrymc_native_util_NativeAccessor.cpp  net_blueberrymc_native_util_NativeAccessor.h
src/main/c/NativeUtil/: NativeUtil.sln  NativeUtil.vcxproj  NativeUtil.vcxproj.filters
src/main/java/net/blueberrymc/native_util/: Bytes.java  ClassDefinition.java  ClassLoadHook.java  LazyOSType.java  NativeAccessor.java  NativeCode.java  NativeException.java  NativeUtil.java
src/main/java/net/blueberrymc/nativeutil/: BoxedValue.java  Bytes.java  ClassDefinition.java  ClassLoadHook.java  LazyOSType.java  NativeAccessor.java  NativeCode.java  NativeException.java  NativeType.java  NativeUtil.java
src/main/resources/: libnativeutil.dylib
src/test/java/net/blueberrymc/native_util/: Benchmark.java  NativeUtilTest.java  TestClass.java
src/test/java/net/blueberrymc/nativeutil/: InvokeTest.java  NativeUtilTest.java
